@@ -1,3 +1,8 @@
+2003-07-23  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/AE/Cache.py: no longer store the full_key in the cached
+	component.  Also, whitespace normalization.
+
 2003-07-22  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/util/cache_reaper.py.in: no longer raise exception when
